# melange

./: .gitattributes  .gitignore  .gitmodules  .ocamlformat  .ocamlformat-ignore  CONTRIBUTING.md  Changes.md  Makefile  README.md  bsconfig.json  bucklescript.opam  bucklescript.opam.template  dune  dune-project  dune.mel  esy.json  fix-install-opam.sh  fix-install.sh  flake.nix  mel.opam  melange-playground.opam  melange-playground.opam.template  melange.opam  melange.opam.template  melange_playground.opam  meldep.opam  opam-check-npm-deps.opam  opam-check-npm-deps.opam.template  package-lock.json  package.json  react-jsx-ppx.opam  reactjs-jsx-ppx.opam  rescript-syntax.opam  rescript-syntax.opam.template  shell.nix
belt/: belt_Array.ml  belt_Float.ml  belt_Float.mli  belt_HashMap.ml  belt_HashSet.mli  belt_Id.ml  belt_Id.mli  belt_Int.mli  belt_List.ml  belt_Map.ml  belt_MapDict.ml  belt_MapDict.mli  belt_MutableMap.ml  belt_MutableMap.mli  belt_MutableQueue.ml  belt_MutableSet.ml  belt_MutableStack.ml  belt_MutableStack.mli  belt_Option.ml  belt_Option.mli  belt_Range.ml  belt_Range.mli  belt_Result.ml  belt_Set.cppo.ml  belt_Set.ml  belt_SetDict.mli  belt_SortArray.ml  belt_SortArray.mli  belt_internalAVLset.ml  belt_internalAVLset.mli  belt_internalAVLtree.ml  belt_internalBuckets.ml  belt_internalSetBuckets.ml  belt_internalSetBuckets.mli  dune  internal_map.cppo.ml  internal_set.cppo.ml  setm.cppo.ml
jscomp/: Makefile  all.depend  build_version.js  build_version.ml  dune
jscomp/ast_derive/: ast_derive.ml  ast_derive_abstract.ml  ast_derive_js_mapper.ml  ast_derive_projector.ml  dune
jscomp/ast_extensions/: ast_extensions.ml  ast_extensions.mli  ast_external_mk.ml  ast_external_mk.mli  dune
jscomp/astlib/: ast_attributes.ml  ast_attributes.mli  ast_external_process.ml  ast_external_process.mli  ast_polyvar.ml  ast_polyvar.mli  ast_structure.ml  dune
jscomp/bsb/: bsb_build_schemas.ml  bsb_build_ui.ml  bsb_build_ui.mli  bsb_build_util.ml  bsb_build_util.mli  bsb_clean.ml  bsb_clean.mli  bsb_config.ml  bsb_config.mli  bsb_config_parse.ml  bsb_config_parse.mli  bsb_config_types.ml  bsb_config_types.mli  bsb_db_encode.ml  bsb_db_encode.mli  bsb_db_util.ml  bsb_db_util.mli  bsb_exception.ml  bsb_exception.mli  bsb_file.ml  bsb_file_groups.ml  bsb_file_groups.mli  bsb_global_backend.ml  bsb_global_backend.mli  bsb_global_paths.ml  bsb_global_paths.mli  bsb_log.ml  bsb_main.ml  bsb_merlin_gen.ml  bsb_merlin_gen.mli  bsb_namespace_map_gen.ml  bsb_namespace_map_gen.mli  bsb_ninja_check.ml  bsb_ninja_check.mli  bsb_ninja_file_groups.ml  bsb_ninja_file_groups.mli  bsb_ninja_gen.ml  bsb_ninja_gen.mli  bsb_ninja_global_vars.ml  bsb_ninja_regen.ml  (+35 more)
jscomp/bsb_helper/: bsb_db_decode.ml  bsb_db_decode.mli  bsb_helper_depfile_gen.ml  bsb_helper_depfile_gen.mli  dune
jscomp/common/: ast_comb.ml  ast_compatible.ml  ast_compatible.mli  ast_config.ml  ast_config.mli  ast_core_type.ml  ast_extract.ml  ast_extract.mli  ast_payload.ml  ast_payload.mli  ast_utf8_string.ml  ast_utf8_string.mli  ast_utf8_string_interp.ml  ast_utf8_string_interp.mli  binary_ast.ml  binary_ast.mli  bs_ast_invariant.ml  bs_ast_invariant.mli  bs_ast_mapper.mli  bs_exception.ml  bs_flow_ast_utils.ml  bs_syntaxerr.mli  bs_version.ml  bs_version.mli  bs_warnings.ml  bs_warnings.mli  classify_function.ml  classify_function.mli  dune  ext_log.ml  ext_log.mli  external_arg_spec.ml  external_arg_spec.mli  external_ffi_attributes.ml  external_ffi_attributes.mli  external_ffi_types.cppo.ml  external_ffi_types.ml  external_ffi_types.mli  external_ffi_types0.ml  flow_ast_utils.ml  (+25 more)
jscomp/core/: artifact_extension.ml  artifact_extension.mli  ast_config.ml  ast_config.mli  ast_io.cppo.ml  ast_io.ml  ast_io.mli  ast_payload.ml  ast_payload.mli  bs_cmi_load.ml  bs_conditional_initial.ml  bs_conditional_initial.mli  builtin_ast_mapper.ml  builtin_ast_mapper.mli  cmd_ast_exception.cppo.ml  cmd_ast_exception.ml  cmd_ast_exception.mli  cmd_ppx_apply.ml  cmd_ppx_apply.mli  compile_letrec.520.ml  compile_rec_module.cppo.ml  compile_rec_module.ml  compile_rec_module.mli  config_util.ml  config_util.mli  config_whole_compiler.ml  config_whole_compiler.mli  dune  ext_log.ml  import.ml  include_dirs.dev.ml  include_dirs.mli  include_dirs.release.ml  initialization.cppo.ml  initialization.ml  initialization.mli  j.ml  j.mli  js_analyzer.ml  js_analyzer.mli  (+257 more)
jscomp/depends/: ast_extract.ml  dune
jscomp/ext/: ansi_color.ml  bs_hash_stubs.cppo.ml  bsb_db.ml  bsb_db.mli  bsc_args.ml  bsc_args.mli  bsc_warnings.ml  dune  ext_array.ml  ext_array.mli  ext_buffer.ml  ext_char.ml  (+90 more)
lib/: bsb.darwin  bsb.linux  bsb.win32  bsb_helper.darwin  bsb_helper.linux  bsb_helper.win32  bsppx.darwin  bsppx.linux  bsppx.win32  checked-in-artifacts.sexp  dune  find_artifacts.ml  reactjs_jsx_ppx_2.win32
playground/: dune  mel_playground.cppo.ml  mel_playground.ml  toolchain.cppo.ml  toolchain.ml  toolchain.mli
ppx/: ast_attributes.ml  ast_attributes.mli  ast_bs_open.ml  ast_bs_open.mli  ast_comb.ml  ast_comb.mli  ast_compatible.ml  ast_compatible.mli  ast_core_type.ml  ast_core_type.mli  ast_core_type_class_type.ml  ast_core_type_class_type.mli  ast_exp_apply.ml  ast_exp_apply.mli  ast_extensions.ml  ast_extensions.mli  ast_external.ml  ast_external.mli  ast_external_mk.ml  ast_external_mk.mli  ast_external_process.ml  ast_external_process.mli  ast_literal.ml  ast_literal.mli  ast_mel_open.ml  ast_mel_open.mli  ast_object.ml  ast_object.mli  ast_open_cxt.ml  ast_open_cxt.mli  ast_pat.ml  ast_pat.mli  ast_payload.ml  ast_payload.mli  ast_polyvar.ml  ast_polyvar.mli  ast_structure.ml  ast_structure.mli  ast_tuple_pattern_flatten.ml  ast_tuple_pattern_flatten.mli  (+27 more)
react-jsx-ppx/: dune  react_jsx_ppx_v3.ml
rescript-syntax/: dune  import.ml  res_ast_conversion.ml  res_ast_debugger.ml  res_comments_table.ml  res_core.mli  res_diagnostics.ml  res_diagnostics_printing_utils.ml  res_driver.ml  res_driver_ml_parser.ml  res_parens.ml  res_parsetree_viewer.mli  res_printer.ml  res_printer.mli
runtime-export/: README.md  dune  make-runtime-package.sh  package.json
(+3508 files in other folders)
