(dirs :standard \ docs node_modules odoc_gen nix)

(env
 (dev
  (env-vars
   (CPPO_FLAGS -U=BS_RELEASE_BUILD)))
 (release
  (env-vars
   (CPPO_FLAGS -D=BS_RELEASE_BUILD))
  (ocamlopt_flags
   (:standard -O3 -unbox-closures)))
 (browser
  (env-vars
   (CPPO_FLAGS -D=BS_BROWSER)))
 (browser-dev
  (js_of_ocaml
   (compilation_mode separate))
  (env-vars
   (CPPO_FLAGS -D=BS_BROWSER))))
