(dirs :standard \ docs rfcs nix)

(env
 (dev
  (env-vars
   (CPPO_FLAGS -U=MELANGE_RELEASE_BUILD)))
 (_
  (env-vars
   (CPPO_FLAGS -D=MELANGE_RELEASE_BUILD))
  (ocamlopt_flags
   (:standard -O3 -unbox-closures))))

(subdir
 node_modules
 (dirs melange melange.js melange.belt)
 (rule
  (alias runtime)
  (mode
   (promote (until-clean)))
  (targets
   (dir melange)
   (dir melange.js)
   (dir melange.belt))
  (deps
   (alias ../runtime-export/runtime-export))
  (action
   (concurrent
    (run cp -r ../runtime-export/packages/melange.js ./melange.js)
    (run cp -r ../runtime-export/packages/melange ./melange)
    (run cp -r ../runtime-export/packages/melange.belt ./melange.belt)))))
