(rule
 (targets
  (dir melange))
 (mode
  (promote (until-clean)))
 (deps
  (:artifacts
   (glob_files ../jscomp/runtime/*.{ml,mli,cmi,cmj})
   (glob_files ../jscomp/others/*.{ml,mli,cmi,cmj})
   (glob_files_rec ../jscomp/stdlib-412/*.{ml,mli,cmi,cmj})))
 (action
  (progn
   (run mkdir -p %{targets})
   (run cp %{artifacts} %{targets}))))

(rule
 (targets
  (dir js))
 (mode
  (promote (until-clean)))
 (deps
  (:runtime-js
   (glob_files ../melange.commonjs/jscomp/runtime/*.js)
   (glob_files ../melange.commonjs/jscomp/others/*.js)
   (glob_files ../melange.commonjs/jscomp/stdlib-412/*.js)
   (glob_files ../melange.commonjs/jscomp/stdlib-412/stdlib_labels/*.js)
   (glob_files ../melange.commonjs/jscomp/stdlib-412/stdlib_modules/*.js)))
 (action
  (progn
   (run mkdir -p %{targets})
   (run cp %{runtime-js} %{targets}))))

(rule
 (targets
  (dir es6))
 (mode
  (promote (until-clean)))
 (deps
  (:runtime-mjs
   (glob_files ../melange.es6/jscomp/runtime/*.mjs)
   (glob_files ../melange.es6/jscomp/others/*.mjs)
   (glob_files ../melange.es6/jscomp/stdlib-412/*.mjs)
   (glob_files ../melange.es6/jscomp/stdlib-412/stdlib_labels/*.mjs)
   (glob_files ../melange.es6/jscomp/stdlib-412/stdlib_modules/*.mjs)))
 (action
  (progn
   (run mkdir -p %{targets})
   (run cp %{runtime-mjs} %{targets}))))
