(executable
 (name find_artifacts))

(rule
 (targets artifacts.sexp)
 (deps melange)
 (mode
  (promote (until-clean)))
 (action
  (with-stdout-to
   artifacts.sexp
   (run ./find_artifacts.exe %{deps}))))

(rule
 (targets
  (dir melange))
 (mode
  (promote (until-clean)))
 (deps
  (:artifacts
   (glob_files ../jscomp/runtime/*.{ml,mli,cmi,cmj,cmt,cmti})
   (glob_files ../jscomp/others/*.{ml,mli,cmi,cmj,cmt,cmti})
   (glob_files_rec ../jscomp/stdlib-412/*.{ml,mli,cmi,cmj,cmt,cmti})))
 (action
  (progn
   (chdir
    %{targets}
    (run cp %{artifacts} .)))))

(rule
 (targets
  (dir js))
 (mode
  (promote (until-clean)))
 (deps
  (:runtime-js
   (glob_files ../jscomp/runtime/*.js)
   (glob_files ../jscomp/others/*.js)
   (glob_files_rec ../jscomp/stdlib-412/*.js)))
 (action
  (progn
   (run mkdir -p %{targets})
   (run cp %{runtime-js} %{targets}))))

(rule
 (targets
  (dir es6))
 (mode
  (promote (until-clean)))
 (deps
  (:runtime-mjs
   (glob_files ../jscomp/runtime/*.mjs)
   (glob_files ../jscomp/others/*.mjs)
   (glob_files_rec ../jscomp/stdlib-412/*.mjs)))
 (action
  (progn
   (run mkdir -p %{targets})
   (run cp %{runtime-mjs} %{targets}))))
