(include_subdirs unqualified)

(library
 (name napkin)
 (flags :standard -w -9)
 (modules :standard \ res_cli)
 (libraries ppxlib compiler-libs.common melange.ppx))

(executable
 (name res_cli)
 (public_name rescript-syntax)
 (package rescript-syntax)
 (modules res_cli)
 (flags -open Napkin)
 (libraries bs_hash_stubs_melange napkin))

(install
 (package rescript-syntax)
 (section bin)
 (files
  (res_cli.exe as rescript_syntax)))
