(library
 (name bsb)
 (preprocess
  (action
   (run %{bin:cppo} %{env:CPPO_FLAGS=} %{input-file})))
 (modules :standard \ mel_workspace)
 (modules_without_implementation bsb_config_types)
 (flags
  (:standard -w -9-50))
 (libraries
  mel_workspace
  bsb_helper
  bs_hash_stubs
  ext
  common
  str
  unix
  base64
  luv))

(library
 (name mel_workspace)
 (preprocess
  (action
   (run %{bin:cppo} %{env:CPPO_FLAGS=} %{input-file})))
 (modules mel_workspace)
 (libraries ext unix))
