(library
 (name melange_ffi)
 (package melange)
 (modules_without_implementation js_raw_info lam_tag_info)
 (libraries melstd melange_compiler_libs js_parser))

(rule
 (target oprint_mel_primitive_name.ml)
 (deps oprint_mel_primitive_name.dev.ml oprint_mel_primitive_name.release.ml)
 (action
  (copy# oprint_mel_primitive_name.%{profile}.ml %{target})))
