(library
 (name melange_ffi)
 (package melange)
 (flags :standard -open StdLabels -open MoreLabels)
 (libraries melstd melange_compiler_libs js_parser))

(rule
 (targets utf8_string.ml)
 (deps utf8_string.cppo.ml)
 (action
  (run
   cppo
   -V
   OCAML:%{ocaml_version}
   %{env:CPPO_FLAGS=}
   %{deps}
   -o
   %{targets})))
