(library
 (name frontend)
 (wrapped false)
 (flags
  (:standard -w -9-50 -open Melange_compiler_libs))
 (preprocess
  (action
   (run cppo -U BS_NATIVE_PPX %{env:CPPO_FLAGS=} %{input-file})))
 (libraries
  ext
  common
  melange-compiler-libs
  outcome_printer
  js_parser
  builtin_datasets
  napkin))
