(executable
 (public_name melc)
 (package melange)
 (flags :standard -open Melange_compiler_libs)
 (libraries
  js_parser
  ext
  common
  melange.ppxlib
  melange_compiler_libs
  core
  cmdliner)
 (modules melc melc_cli)
 (preprocess
  (action
   (run cppo "%{env:CPPO_FLAGS=}" -D BS_BROWSER %{input-file}))))

(executable
 (public_name melpp)
 (package melange)
 (modules melpp)
 (flags :standard -open Melange_compiler_libs)
 (libraries common core cmdliner melange.ppxlib-ast melange_compiler_libs))

(executable
 (public_name melppx)
 (package melange)
 (modules melppx)
 (libraries melange.ppx ppxlib))

(test
 (name ounit_tests_main)
 (package melange)
 (modules ounit_tests_main)
 (libraries ounit2 ounit_tests))

(executable
 (name jsoo_main)
 (modules jsoo_main jsoo_common)
 ; Need to use melange_ppx, not melange_ppx_lib, so Driver.V2.register_transformation runs
 (libraries core melange_compiler_libs melange_ppx)
 (modes js))
